Adding scroll things
and tweaking CSS and text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<a href="#competition">La Comp&eacute;tition</a>
 				<a href="#schedule">Horaire</a>
 				<a href="#contact">Nous Contacter</a>
-				<a href="https://sites.google.com/a/etsmtl.net/geniale/">GéniAle</a>
+				<a href="https://sites.google.com/a/etsmtl.net/geniale/" target="_blank">GéniAle</a>
 			</div>
 		</div>
 	</nav>
@@ -44,7 +44,10 @@
 		<div class="container">
 			<h1>Saveurs de génie en quelques mots</h1>
 			<p>
-				Saveurs de génie sera la première compétition interuniversitaire de clubs brassicole du Québec. Cela stimulera leur développement et permettra d’établir une fondation forte aux clubs brassicoles universitaires. Pendant la journée du vendredi 27 novembre 2015, des microbrasseries québécoises viendront à l’École de technologie supérieure (ÉTS) vendre des échantillons de quatre onces de leurs savoureuses bières. Cela sera aussi une excellente opportunité pour enrichir les étudiants présents et le public sur la diversité du monde microbrassicole Québécois. Afin de financer l’événement, des houblonnières ainsi que des fournisseurs d’équipement brassicole pourront louer un emplacement pour se représenter. Saveurs de génie prévoit accueillir aux environs de 1000 à 2000 personnes au courant de la journée. Cela est envisageable considérant la population de 7600 étudiants de l’ÉTS et la présence d’étudiants des autres universités ainsi que la présence du public.
+				Saveurs de génie est la première compétition interuniversitaire de clubs brassicole du Québec crée pour stimuler leur développement et permettre d’établir une fondation forte aux clubs brassicoles universitaires.
+			</p>
+			<p>
+				Pendant la journée du vendredi 27 novembre 2015, des microbrasseries québécoises viendront à l’École de technologie supérieure (ÉTS) vendre des échantillons de quatre onces de leurs savoureuses bières. Cela sera aussi une excellente opportunité pour enrichir les étudiants présents et le public sur la diversité du monde microbrassicole Québécois. Afin de financer l’événement, des houblonnières ainsi que des fournisseurs d’équipement brassicole pourront louer un emplacement pour se représenter. Saveurs de génie prévoit accueillir aux environs de 1000 à 2000 personnes au courant de la journée. Cela est envisageable considérant la population de 7600 étudiants de l’ÉTS et la présence d’étudiants des autres universités ainsi que la présence du public.
  			</p>
  			<p>
 				Le fonctionnement sera relativement simple, le coût d’entrée est inclus dans l’achat du verre officiel de Saveurs de génie. Seulement ceux ayant le verre en question pourront acheter de la bière ou toutes autres consommations présentes sur le site. Celui-ci est ouvert au public. À titre éducatif, un conférencier est invité à donner une présentation sur les défis technologiques de la fabrication de la bière. Cette présentation aura lieu dans un grand auditorium, l’accès ne sera pas restreint.
@@ -72,18 +75,18 @@
 	<section id="schedule">
 		<div class="container">
 			<h1>Horaire</h1>
-			<p>
-				Heures			Activités
-				 12H00			 Ouverture officielle de Saveurs de génie
-				 12H30			 Début de la première conférence
-				 13H30			 Fin de la première conférence
-				 13H45			 Début de la compétition
-				 15H30			 Fin du la délibération des juges
-				 17H00			 Début de la deuxième conférence
-				 18H00			 Fin de la deuxième conférence
-				 18H30			 Annoncement du ou des vainqueurs
-				 22H00 à 23H00	 Fin de Saveurs de génie
-			</p>
+			<table>
+				<tr><td><b>Heures</b></td>	<td><b>Activités</b></td></tr>
+				<tr><td>12H00</td>			<td>Ouverture officielle de Saveurs de génie</td></li>
+				<tr><td>12H30</td>			<td>Début de la première conférence</td></li>
+				<tr><td>13H30</td>			<td>Fin de la première conférence</td></li>
+				<tr><td>13H45</td>			<td>Début de la compétition</td></li>
+				<tr><td>15H30</td>			<td>Fin du la délibération des juges</td></li>
+				<tr><td>17H00</td>			<td>Début de la deuxième conférence</td></li>
+				<tr><td>18H00</td>			<td>Fin de la deuxième conférence</td></li>
+				<tr><td>18H30</td>			<td>Annoncement du ou des vainqueurs</td></li>
+				<tr><td>22H00 à 23H00</td>	<td>Fin de Saveurs de génie</td></li>
+			</table>
 		</div>
 	</section>
 	<section id="contact">
