tiny tweaks because they bug me

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<nav id="#top">
 		<div class="container">
 			<a href="#top">
-				<h1>GéniAle</h1>
+				<h1>Saveurs de Génie</h1>
 			</a>
 			<div>
 				<a href="#about">&Agrave; propos</a>
