Implimenting client-requested changes

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 		<div class="container">
 			<article>
 				<time class="underline">27-10-2016</time>
-				<h1>Saveurs de Génie</h1>
+				<img src="images/Logo_800.png"/>
 			</article>
 		</div>
 		<div class="divider by-three">
 			<div class="container">
-				<div><i class="fa fa-map-marker"></i> &Eacute;TS Montréal</div>
+				<div><a target="_blank" href="https://www.google.ca/maps/place/%C3%89TS+Building+B,+1111+Rue+Notre-Dame+O,+Montr%C3%A9al,+QC+H3C+6M8/@45.4949148,-73.5660745,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc91a674e2b79fd:0x93321fa93647b8ad!8m2!3d45.4954091!4d-73.5630755?hl=en"><i class="fa fa-map-marker"></i> &Eacute;TS Montréal</a></div>
 				<div><i class="fa fa-calendar"></i> Jeudi le 27 Octobre</div>
 				<div><i class="fa fa-users"></i> Présenté par <b>GéniAle</b></div>
 			</div>
