removed hot-linking to logo

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			<a href="https://www.etsmtl.ca/Entreprises-diplomes/Diplomes/Le-Reseau-ETS"><img src="images/reseau-ets.png"/></a>
 			<a href="http://bsgcanada.com/"><img src="images/0000966.png"/></a>
 			<a href="http://www.omnichem.ca/"><img src="images/omnichem.png"/></a>
-			<a href="http://www.biereetvin.com/"><img src="http://www.biereetvin.com/images/logo.png"/></a>
+			<a href="http://www.biereetvin.com/"><img src="images/mout_logo.png"/></a>
 			<p id="copy">
 				Site cr&eacute;e par <a href="http://hekaton.studio" target="_blank">Hekaton Studios</a> &copy;2016
 			</p>
