Fix date for the event

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 	<section id="cover">
 		<div class="container">
 			<article>
-				<time class="underline">27-10-2016</time>
+				<time class="underline">11-11-2016</time>
 				<img src="images/Logo_800.png"/>
 			</article>
 		</div>
 		<div class="divider by-three">
 			<div class="container">
 				<div><a target="_blank" href="https://www.google.ca/maps/place/%C3%89TS+Building+B,+1111+Rue+Notre-Dame+O,+Montr%C3%A9al,+QC+H3C+6M8/@45.4949148,-73.5660745,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc91a674e2b79fd:0x93321fa93647b8ad!8m2!3d45.4954091!4d-73.5630755?hl=en"><i class="fa fa-map-marker"></i> &Eacute;TS Montréal</a></div>
-				<div><i class="fa fa-calendar"></i> Jeudi le 27 Octobre</div>
+				<div><i class="fa fa-calendar"></i> Vendredi le 11 Novembre</div>
 				<div><i class="fa fa-users"></i> Présenté par <b>GéniAle</b></div>
 			</div>
 		</div>
@@ -48,7 +48,7 @@
 				Saveurs de génie est la première compétition interuniversitaire de clubs brassicole du Québec crée pour stimuler leur développement et permettre d’établir une fondation forte aux clubs brassicoles universitaires.
 			</p>
 			<p>
-				Pendant la journée du vendredi 27 novembre 2015, des microbrasseries québécoises viendront à l’École de technologie supérieure (ÉTS) vendre des échantillons de quatre onces de leurs savoureuses bières. Cela sera aussi une excellente opportunité pour enrichir les étudiants présents et le public sur la diversité du monde microbrassicole Québécois. Afin de financer l’événement, des houblonnières ainsi que des fournisseurs d’équipement brassicole pourront louer un emplacement pour se représenter. Saveurs de génie prévoit accueillir aux environs de 1000 à 2000 personnes au courant de la journée. Cela est envisageable considérant la population de 7600 étudiants de l’ÉTS et la présence d’étudiants des autres universités ainsi que la présence du public.
+				Pendant la journée du vendredi 11 novembre 2016, des microbrasseries québécoises viendront à l’École de technologie supérieure (ÉTS) vendre des échantillons de quatre onces de leurs savoureuses bières. Cela sera aussi une excellente opportunité pour enrichir les étudiants présents et le public sur la diversité du monde microbrassicole Québécois. Afin de financer l’événement, des houblonnières ainsi que des fournisseurs d’équipement brassicole pourront louer un emplacement pour se représenter. Saveurs de génie prévoit accueillir aux environs de 1000 à 2000 personnes au courant de la journée. Cela est envisageable considérant la population de 7600 étudiants de l’ÉTS et la présence d’étudiants des autres universités ainsi que la présence du public.
  			</p>
  			<p>
 				Le fonctionnement sera relativement simple, le coût d’entrée est inclus dans l’achat du verre officiel de Saveurs de génie. Seulement ceux ayant le verre en question pourront acheter de la bière ou toutes autres consommations présentes sur le site. Celui-ci est ouvert au public. À titre éducatif, un conférencier est invité à donner une présentation sur les défis technologiques de la fabrication de la bière. Cette présentation aura lieu dans un grand auditorium, l’accès ne sera pas restreint.
@@ -65,10 +65,10 @@
  			<p>
 				Le comité organisateur de Saveurs de génie est fier d'annoncer que Sherbroue et l'Asssociation des Brasseurs de l'Université de Montréal (ABUM) seront de la compétition. Malheureusement, Brassta de l'université Laval et Polybroue de l'École Polytechnique se sont désistés.
 			</p>
- 			<p> 
+ 			<p>
 				Cette compétition a deux volets, le premier sera de déterminer qui brasse la meilleure bière selon un type imposé : <b>Session IPA</b> (Specialty IPA)
 			</p>
- 			<p> 
+ 			<p>
 				Il est aussi fortement suggéré d’utiliser du houblon québécois.<br/>
 				Le deuxième volet est d’ordre technologique, chaque club étudiant aura la chance donner une présentation de 10 minutes sur leurs dernières innovations technologiques. Puisque certains clubs sont spécialisés dans les sciences liées à l’alimentation ou la chimie, le gagnant sera sélectionné en fonction de l’intérêt porté par les juges vis-à-vis lesdites technologies.
 			</p>
